<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="by.aermakova.habitat.view.main.category.addNew.AddNewCategoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white">

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/back"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/color_white"
                android:drawableStart="@drawable/ic_back_arrow"
                android:drawableTint="@color/color_pink"
                app:onClick="@{viewModel.back}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/proxima_nova_bold"
                android:text="@string/new_category"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/proxima_nova_font"
                android:text="@string/new_category_color"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/colors_recycler"
                android:layout_width="match_parent"
                android:layout_height="106dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal"
                app:bindColorsSelector="@{viewModel.selectColorUseCase.colorAdapter}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/proxima_nova_font"
                android:text="@string/new_habit_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/proxima_nova_font"
                android:hint="@string/enter_habit_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                app:tempTitle="@{viewModel.tempCategoryTitle}"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryLight"
                android:textSize="16sp"
                android:theme="@style/Theme.App.EditText" />
        </LinearLayout>

        <Button
            android:id="@+id/start_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn_custom_rect"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="@string/create_txt"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95"
            app:onClick="@{viewModel.saveCategory}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>