<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="by.aermakova.habitat.view.main.habit.AddNewHabitViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white">

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/back"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@color/color_white"
                android:drawableStart="@drawable/ic_back_arrow"
                android:drawableTint="@color/color_pink" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/proxima_nova_bold"
                android:text="@string/new_habit"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/proxima_nova_font"
                    android:text="@string/category"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/category_recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/proxima_nova_font"
                    android:text="@string/new_habit_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/proxima_nova_font"
                    android:hint="@string/enter_habit_title"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={viewModel.title}"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:textSize="16sp"
                    android:theme="@style/Theme.App.EditText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/proxima_nova_font"
                    android:text="@string/new_habit_duration"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <com.warkiz.widget.IndicatorStayLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.warkiz.widget.IndicatorSeekBar
                        android:id="@+id/seek_bar_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:isb_indicator_content_layout="@layout/custom_indicator_oval"
                        app:isb_indicator_text_color="@color/color_white"
                        app:isb_indicator_text_size="18sp"
                        app:isb_max="50"
                        app:isb_min="10"
                        app:isb_progress="21"
                        app:isb_seek_smoothly="true"
                        app:isb_show_indicator="custom"
                        app:isb_thumb_color="@color/colorAccent"
                        app:isb_thumb_size="12dp"
                        app:isb_track_background_color="@color/colorPink"
                        app:isb_track_background_size="2dp"
                        app:isb_track_progress_color="@color/colorAccent"
                        app:isb_track_progress_size="4dp" />
                </com.warkiz.widget.IndicatorStayLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/proxima_nova_font"
                    android:text="@string/new_habit_timetable"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/schedule_spinner"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:spinnerMode="dropdown" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/week_days_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="horizontal"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/proxima_nova_font"
                        android:text="@string/new_habit_remind"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <ToggleButton
                        android:id="@+id/set_notification"
                        android:layout_width="70dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/toggle_selector"
                        android:checked="@{viewModel.notificationEnable}"
                        android:text=""
                        android:textOff=""
                        android:textOn="" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/set_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/new_habit_remind_time"
                        android:fontFamily="@font/proxima_nova_font"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/show_time_picker_button"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@color/color_white"
                        android:fontFamily="@font/proxima_nova_font"
                        android:text="@string/change_time"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <Button
            android:id="@+id/start_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn_custom_rect"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="@string/create_txt"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="18sp"
            android:onClick="@{() -> viewModel.saveHabit()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>